--- a/website/siteapp/templates/siteapp/index.html
+++ b/website/siteapp/templates/siteapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="em">
+<html lang="en">
     <head>
         <title>CSA TESTing</title>
         <style>
@@ -8,20 +8,94 @@
                 font-size: 30px;
                 text-align: center;
             }
+            h2{
+                font-family: arial;
+                font-size: 15px;
+                text-align: center;
+            }
+            body{
+                background-color: aquamarine;
+            }
             p {
                 font-family: "segoe ui";
                 text-align: center;
             }
+            div {
+                border: 2px, solid, black;
+                margin: 20px;
+                padding: 20px;
+            }
+            table, td{
+                border: 1px, dashed, black;
+                width: 100%;
+                border-collapse: collapse;
+            }
+
         </style>
-        <body>
-            <h1>
-                AP CSA Supplementary Study Guide
-            </h1>
-            <p>
-                A little website that compiles the notes I took for the AP Computer Science A course.
-                This website is meant to be supplementary. Also, the curriculum changes the school year after the time of writing, so it'll be at least partially obsoleted.
-                Unit 9 (Inheritance) will become entirely irrelevant as it's been removed from said curriculum, while the other 9 units will be combined into 4 units.
-            </p>
-        </body>
     </head>
+    <body>
+        <h1>
+            AP CSA Supplementary Study Guide
+        </h1>
+        <p>
+            A little website that compiles the notes I took for the AP Computer Science A course.
+            This website is meant to be supplementary. Also, the curriculum changes the school year after the time of writing, so it'll be at least partially obsoleted.
+            Unit 9 (Inheritance) will become entirely irrelevant as it's been removed from said curriculum, while the other 9 units will be combined into 4 units.
+        </p>
+        <div>
+            <h2>Unit Selection</h2>
+            <table>
+                <tr>
+                    <td>
+                        <p>Unit 1: Primitive Types</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Unit 2: Using Objects</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Unit 3: Boolean Expressions and if Statements</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Unit 4: Iteration</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Unit 5: Writing Classes</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Unit 6: Array</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Unit 7: ArrayList</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Unit 8: 2D Array</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Unit 9: Inheritance</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Unit 10: Recursion</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </body>
 </html>
