--- a/website/siteapp/templates/siteapp/index.html
+++ b/website/siteapp/templates/siteapp/index.html
@@ -14,7 +14,7 @@
                 text-align: center;
             }
             body{
-                background-color: aquamarine;
+                background: rgba(50, 200, 150, 0.7);
             }
             p {
                 font-family: "segoe ui";
@@ -47,52 +47,52 @@
             <table>
                 <tr>
                     <td>
-                        <p>Unit 1: Primitive Types</p>
+                        <p><a href="{% url 'unit' 1 %}">Unit 1: Primitive Types</a></p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p>Unit 2: Using Objects</p>
+                        <p><a href="{% url 'unit' 2 %}">Unit 2: Using Objects</a></p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p>Unit 3: Boolean Expressions and if Statements</p>
+                        <p><a href="{% url 'unit' 3 %}">Unit 3: Boolean Expressions and if Statements</a></p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p>Unit 4: Iteration</p>
+                        <p><a href="{% url 'unit' 4 %}">Unit 4: Iteration</a></p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p>Unit 5: Writing Classes</p>
+                        <p><a href="{% url 'unit' 5 %}">Unit 5: Writing Classes</a></p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p>Unit 6: Array</p>
+                        <p><a href="{% url 'unit' 6 %}">Unit 6: Array</a></p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p>Unit 7: ArrayList</p>
+                        <p><a href="{% url 'unit' 7 %}">Unit 7: ArrayList</a></p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p>Unit 8: 2D Array</p>
+                        <p><a href="{% url 'unit' 8 %}">Unit 8: 2D Array</a></p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p>Unit 9: Inheritance</p>
+                        <p><a href="{% url 'unit' 9 %}">Unit 9: Inheritance</a></p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p>Unit 10: Recursion</p>
+                        <p><a href="{% url 'unit' 10 %}">Unit 10: Recursion</a></p>
                     </td>
                 </tr>
             </table>
