finished units 4 5 6 and 7, minor additions to others

--- a/website/siteapp/templates/siteapp/2.html
+++ b/website/siteapp/templates/siteapp/2.html
@@ -51,7 +51,7 @@
     </head>
     <body>
         <h1>
-            Unit 2
+            Unit 2: Using Objects
         </h1>
         <h2>
             2.1: Objects: Instances of Classes
@@ -217,7 +217,8 @@
     // if they are the exact same, the result is 0
     // capital letters are alphabetically earlier than lower-case letters
     str.equals(other) // returns true/false based on whether or not the two Strings contain the same characters in the same order. Case sensitive.
-    // don't use == to check for String equivalency, or equivalency of any reference type for that matter </pre></code></td></table>
+    // don't use == to check for String equivalency, or equivalency of any reference type for that matter 
+    str.indexOf(String search) // returns the index value of the first occurrence of search in str; returns -1 if not found. </pre></code></td></table>
         <p>
             toString() is another common method used to print information regarding an object. Java automatically interprets the printing of an object's identifier 
             as a call to toString(). However, it has to be overloaded inside classes you write, since the base version that exists outputs something you can't really 
