--- a/website/siteapp/templates/siteapp/index.html
+++ b/website/siteapp/templates/siteapp/index.html
@@ -41,6 +41,9 @@
             This website is meant to be supplementary. Also, the curriculum changes the school year after the time of writing, so it'll be at least partially obsoleted.
             Unit 9 (Inheritance) will become entirely irrelevant as it's been removed from said curriculum, while the other 9 units will be combined into 4 units.
         </p>
+        <p>
+            Omitted lessons are either lessons based around practicing or irrelevant to the exam.
+        </p>
         <div>
             <h2>Unit Selection</h2>
             <table>
