--- a/website/siteapp/templates/siteapp/2.html
+++ b/website/siteapp/templates/siteapp/2.html
@@ -40,6 +40,16 @@
                 width: 75%;
                 color: white;
             }
+            .left{
+                text-align: left;
+                font-size: 15px;
+                font-family: "segoe ui";
+                padding-left: 0%;
+                padding-right: 0%;
+            }
+            .back{
+                color: black;
+            }
             pre {
                 white-space: pre-wrap;
                 word-wrap: break-word;
@@ -50,6 +60,7 @@
     </pre></code></td></table> -->
     </head>
     <body>
+        <p class="left"><a class="back" href="{% url 'index' %}"><- Back</a></p>
         <h1>
             Unit 2: Using Objects
         </h1>
