added a unit select bar at the top

--- a/website/siteapp/templates/siteapp/1.html
+++ b/website/siteapp/templates/siteapp/1.html
@@ -54,13 +54,16 @@
                 white-space: pre-wrap;
                 word-wrap: break-word;
             }
-            .grid {
+            .bar {
                 display: block;
                 width: 50%;
-                float:
+                height: 30px;
                 margin: auto;
                 font-size: 15px;
                 font-family: "segoe ui";
+                border: 1px solid black;
+                text-align: center;
+                padding: 5px;
             }
         </style>
     </head>
@@ -68,18 +71,18 @@
     <pre>
     </pre></code></td></table> -->
     <body>
-        <div class="grid">
-                <div>Units:</div> 
-                <div><a href="{% url 'unit' 1 %}">Unit 1</a></div>
-                <div><a href="{% url 'unit' 2 %}">Unit 2</a></div>
-                <div><a href="{% url 'unit' 3 %}">Unit 3</a></div>
-                <div><a href="{% url 'unit' 4 %}">Unit 4</a></div>
-                <div><a href="{% url 'unit' 5 %}">Unit 5</a></div>
-                <div><a href="{% url 'unit' 6 %}">Unit 6</a></div>
-                <div><a href="{% url 'unit' 7 %}">Unit 7</a></div>
-                <div><a href="{% url 'unit' 8 %}">Unit 8</a></div>
-                <div><a href="{% url 'unit' 9 %}">Unit 9</a></div>
-                <div><a href="{% url 'unit' 10 %}">Unit 10</a></div>
+        <div class="bar">
+                Units:
+                <a href="{% url 'unit' 1 %}">Unit 1</a> 
+                <a href="{% url 'unit' 2 %}">Unit 2</a> 
+                <a href="{% url 'unit' 3 %}">Unit 3</a> 
+                <a href="{% url 'unit' 4 %}">Unit 4</a> 
+                <a href="{% url 'unit' 5 %}">Unit 5</a> 
+                <a href="{% url 'unit' 6 %}">Unit 6</a> 
+                <a href="{% url 'unit' 7 %}">Unit 7</a> 
+                <a href="{% url 'unit' 8 %}">Unit 8</a> 
+                <a href="{% url 'unit' 9 %}">Unit 9</a> 
+                <a href="{% url 'unit' 10 %}">Unit 10</a> 
         </div>
         <p class="left"><a class="back" href="{% url 'index' %}"><- Back</a></p>
         <h1>
