--- a/website/siteapp/templates/siteapp/3.html
+++ b/website/siteapp/templates/siteapp/3.html
@@ -54,11 +54,35 @@
                 white-space: pre-wrap;
                 word-wrap: break-word;
             }
+            .bar {
+                display: block;
+                width: 50%;
+                height: 30px;
+                margin: auto;
+                font-size: 15px;
+                font-family: "segoe ui";
+                border: 1px solid black;
+                text-align: center;
+                padding: 5px;
+            }
         </style>
     <!--<table><td><code class="codetable"><pre>
     </pre></code></td></table> -->
     </head>
     <body>
+        <div class="bar">
+                Units:
+                <a href="{% url 'unit' 1 %}">Unit 1</a> 
+                <a href="{% url 'unit' 2 %}">Unit 2</a> 
+                <a href="{% url 'unit' 3 %}">Unit 3</a> 
+                <a href="{% url 'unit' 4 %}">Unit 4</a> 
+                <a href="{% url 'unit' 5 %}">Unit 5</a> 
+                <a href="{% url 'unit' 6 %}">Unit 6</a> 
+                <a href="{% url 'unit' 7 %}">Unit 7</a> 
+                <a href="{% url 'unit' 8 %}">Unit 8</a> 
+                <a href="{% url 'unit' 9 %}">Unit 9</a> 
+                <a href="{% url 'unit' 10 %}">Unit 10</a> 
+        </div>
         <p class="left"><a class="back" href="{% url 'index' %}"><- Back</a></p>
         <h1>
             Unit 3: Boolean Expressions and if Statements
